<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_rate">Rate</string>
    <string name="title_version">Version</string>
    <string name="calendar">Calendar</string>
    <string name="times_disrupted">Times Disrupted</string>
    <string name="total_averages">Total Averages</string>
    <string name="total_recording_time">Total Recording Time</string>
    <string name="track">Track</string>
    <string name="history">History</string>
    <string name="alarms">Alarms</string>
    <string name="sleep_efficiency">Sleep Efficiency</string>
    <string name="to_get_started_tap_the_track_button">To get started, tap the Track button.</string>
    <string name="morning_feel">Morning Feel</string>
    <string name="oops_there_was_error_while_generating_image_for_sharing">Oops, there was an error generating image of sleep for sharing.</string>
    <string name="unfortunately_no_sleep_record_was_available_for_sharing">Unfortunately, no sleep record was available for sharing</string>
    <string name="i_am_sorry_but_cannot_share_zeo_sleep_without_sdcard">I\'m sorry but sharing Zeo sleep information requires an SD card be present in your phone (to share the image with other apps).</string>
    <string name="see_how_i_slept_on">See how I slept on</string>
    <string name="download_sleep_101_for_free">Download Sleep 101 for free at: www.myZeo.com/ElectricSleep</string>
    <string name="screen_will_dim">Screen will dim in 15 seconds. DO NOT PRESS
ANYTHING.</string>
    <string name="legend_light_sleep_trigger">SmartWake Lite Trigger</string>
    <string name="legend_movement">Movement</string>
    <string name="warming_up">Warming up sensors, please wait.</string>
    <string name="go_into_standy">Press your device\'s standby button</string>
    <string name="standby_test_results">Standby Test Results</string>
    <string name="completed_standby_test">Completed standby test.</string>
    <string name="identified_that_android_device_must_be_on">We\'ve identified that your Android device\'s screen must be powered on during the recording of movement. To lower power consumption and to protect your screen, we\'ve enabled a special dim screensaver.</string>
    <string name="identified_screen_can_be_turned_off">Good news: we\'ve identified that it is possible to power off your Android device\'s screen while recording movement.</string>
    <string name="movement_calibration_instructions">Movement Calibration Instructions</string>
    <string name="calibrate_movement_sensitivity">Calibrate Movement Sensitivity</string>
    <string name="calibrate_directions_force_screen_on"><li>A bug exists on some devices that prevents the accelerometer from
reporting changes while the screen is off.</li>\n<li>When prompted, put your device in standby and wait up to 10
seconds.</li>\n<li>Your screen will be automatically turned back on. Unlock your
phone if necessary.</li>\n<li>Press next to begin.</li></string>
    <string name="calibrate_description_force_screen_on"><b>Goal:</b>Make sure that Force Screen On is enabled for devices that need it.</string>
    <string name="calibrate_title_force_screen_on">Force Screen On Calibration</string>
    <string name="press_next_to_continue">Press next to continue</string>
    <string name="title_sleep_switches">Sleep Switches</string>
    <string name="time_to_fall_asleep">Time to Fall Asleep</string>
    <string name="summary_pref_sensor_delay">Try changing this if you\'re having problems with
sleep movement collection.</string>
    <string name="title_pref_sensor_delay">Sensor Delay</string>
    <string name="title_report">Email Developer</string>
    <string name="summary_pref_analytics_off">Anonymous usage will not be uploaded</string>
    <string name="summary_pref_analytics_on">Anonymous usage will be uploaded</string>
    <string name="title_pref_analytics">Upload Anonymous Usage</string>
    <string name="pref_analytics">Allow Google Analytics</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="account_creation">ElectricSleep Account Creation</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="electricsleep_about">How ElectricSleep Works</string>
    <string name="electricsleep_description">\tElectricSleep is a new way to sleep. After you
place your Android device within a foot or two of you on your
bed,
press sleep and
ElectricSleep
will record data from your device\'s
accelerometer all
night.\n\n
\tThe movements it records signify
sleep
cycles. Aside
from
providing analysis and insight into your sleep
patterns, you can
set
an alarm to wake you during light sleep, so you
wake more easily
than
with a traditional alarm.</string>
    <string name="title_welcome">Welcome to ElectricSleep!</string>
    <string name="about">About</string>
    <string name="welcome_tutorial">Welcome Tutorial</string>
    <string name="summary_pref_force_screen_off">Screen will be allowed to turn off during sleep.
If
you are having problems recording sleep throughout the night, enable
this.</string>
    <string name="summary_pref_force_screen_on">Screen will be forced on and dimmed during sleep.
If you are having problems recording sleep throughout the night,
enable this.</string>
    <string name="title_pref_force_screen">Force Screen On</string>
    <string name="summary_pref_airplane_mode_off">Airplane mode will not be automatically enabled
when sleeping</string>
    <string name="summary_pref_airplane_mode_on">Airplane mode will be automatically enabled when
sleeping</string>
    <string name="title_pref_airplane_mode">Airplane Mode Sleep</string>
    <string name="summary_pref_silent_mode_off">Silent mode will not be automatically enabled
when
sleeping</string>
    <string name="summary_pref_silent_mode_on">Silent mode will be automatically enabled when
sleeping</string>
    <string name="title_pref_silent_mode">Silent Mode Sleep</string>
    <string name="title_misc">Miscellaneous</string>
    <string name="summary_pref_calibration">Tap to calibrate movement sensitivities
automatically</string>
    <string name="title_pref_calibration">Calibration Wizard</string>
    <string name="pref_calibration">calibrationWizard</string>
    <string name="summary_pref_use_alarm_off">ElectricSleep will not try to wake you up *before*
the next enabled alarm in sleep mode</string>
    <string name="summary_pref_use_alarm_on">ElectricSleep is set to try to wake you up
*before*
the next
enabled alarm in sleep mode</string>
    <string name="title_pref_use_alarm">SmartWake Lite</string>
    <string name="calibrate_title_results">Calibration Complete</string>
    <string name="calibrate_directions_alarm"><li>
A window will appear with a                                    <b>graph that
shows your movement</b>
, and a                                    <b>slider that controls a white threshold line</b>
.</li>\n<li>
Adjust the slider so that when you                                    <b>move gently</b>
, the                                    <b>green line goes just above the white line</b>
.</li>\n<li>
Also ensure that when you                                    <b>are still</b>
, the                                    <b>green line is significantly below the white line.</b>
        </li>\n<li>Press next to begin.</li></string>
    <string name="calibrate_description_alarm"><b>Goal:</b>identify the amount of
movement that signifies that you are in light
sleep and set off alarms if enabled.</string>
    <string name="calibrate_title_alarm">Calibrate Light Sleep Sensitivity</string>
    <string name="calibrate_description_placement">ElectricSleep uses your device\'s accelerometer to record movement
during sleep. As such, your device must move slightly when you move
during the
night.\n\n<li>
            <b>DO</b>
place your device on within a foot or two of your body on your bed,
couch, etc. where it will absorb vibrations as you move...</li>\n<li>
            <b>DO NOT</b>
place your device near edges, very far your body, or
cover
it if it is
charging.</li>\n<li>
At this time,                                    <b>situate yourself and your device exactly as you would when
sleeping.</b>
        </li></string>
    <string name="calibrate_title_placement">Device Placement</string>
    <string name="calibrate_title_welcome">Movement Calibration Wizard</string>
    <string name="tracking">Tracking</string>
    <string name="title_calibrate">Calibration</string>
    <string name="title_settings">Settings</string>
    <string name="title_pref_alarm_trigger_sensitivity">Light Sleep Sensitivity</string>
    <string name="summary_alarm_trigger_sensitivity">Level of movement that signifies light sleep will
trigger alarm
to go off.</string>
    <string name="calibrate_description_welcome">This wizard helps you calibrate ElectricSleep to your unique sleeping conditions. The process takes less than a minute and is recommended because:</string>
    <string name="title_pref_alarm_window">SmartWake Lite Window</string>
    <string name="summary_pref_alarm_window">The window of time before the next enabled alarm which SmartWake Lite will be active</string>
    <string name="donate">Donate</string>
    <string name="title_pref_alarms">Alarms</string>
    <string name="alarm_in_silent_mode_title">Alarm in silent mode</string>
    <string name="alarm_in_silent_mode_summary">Play alarm even when the phone is in silent mode</string>
    <string name="snooze_duration_title">Snooze duration</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="alarm_volume_summary">Set the volume of alarms</string>
    <string name="volume_button_setting_title">Volume and Camera</string>
    <string name="volume_button_dialog_title">Button effect</string>
    <string name="volume_button_setting_summary">Set what these buttons do when pressed during an alarm</string>
    <string name="sensors">Sensors</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="notification_screenbug_ticker">Waiting for the device to enter standby.</string>
    <string name="rate_in_market">Rate ElectricSleep on the Play Market</string>
    <string name="welcome_paragraph_one">Place your Android device within a foot or two of you on your bed and start tracking.</string>
    <string name="welcome_paragraph_two">ElectricSleep will provide analysis and insight into your sleep patterns. You can also set a SmartWake Lite alarm to help wake you up feeling more refreshed.</string>
    <string name="welcome_how_track"><b>Track:</b> Press the Track icon and put your Android device about a foot from you on your bed to track your sleep.</string>
    <string name="welcome_how_alarm"><b>Alarm:</b> Set a regular alarm, or try SmartWake Lite for a better morning.</string>
    <string name="welcome_how_history"><b>History:</b> Your sleep movement graph and summary info is saved for you to review.</string>
    <string name="welcome_how_settings">Adjust settings such as the SmartWake Lite alarm and tracking sensitivity by selecting \"Settings\" from the menu.</string>
    <string name="check_your_screen_settings">Check Your Screen Settings</string>
    <string name="some_android_devices_will_prevent_this_app_from_working_while_the_screen_is_off_">Some Android devices will prevent this app from working while the screen is off.</string>
    <string name="to_detect_if_this_occurs_on_your_device_put_your_device_in_standby_mode_usually_by_quickly_pressing_the_power_button_">To detect if this occurs on your device, put your device in standby mode (usually by quickly pressing the power button).</string>
    <string name="wait_up_to_10_seconds_for_your_screen_to_automatically_turn_back_on_then_you_may_need_to_unlock_your_device_to_continue_">Wait up to 10 seconds for your screen to automatically turn back on. Then you may need to unlock your device to continue.</string>
</resources>