<?xml version="1.0" encoding="utf-8"?>
<com.androsz.electricsleep.widget.ViewFlipperBugfix
	xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/wizardViewFlipper"
	android:layout_height="wrap_content" android:layout_width="fill_parent">
	<ScrollView android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_width="fill_parent">
			<TextView style="@style/TextHeader" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/calibrate_title_welcome"
				android:layout_gravity="center_horizontal"></TextView>
			<TextView android:layout_height="wrap_content" style="@style/TextBody"
				android:text="@string/calibrate_description_welcome"
				android:layout_width="wrap_content"></TextView>
		</LinearLayout>
	</ScrollView>
	<ScrollView android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_width="fill_parent">
			<TextView style="@style/TextHeader" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
				android:text="@string/calibrate_title_placement"></TextView>
			<TextView android:layout_height="wrap_content" style="@style/TextBody"
				android:text="@string/calibrate_description_placement"
				android:layout_width="wrap_content"></TextView>
		</LinearLayout>
	</ScrollView>
	<ScrollView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/alarmTest">
		<LinearLayout android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_width="fill_parent">
			<TextView android:layout_height="wrap_content" style="@style/TextHeader"
				android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
				android:text="@string/calibrate_title_alarm"></TextView>
			<TextView android:layout_height="wrap_content" style="@style/TextBody"
				android:layout_width="fill_parent" android:text="@string/calibrate_description_alarm"></TextView>
			<TextView style="@style/TextBody" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:paddingTop="12dip"
				android:text="@string/calibrate_directions_alarm"></TextView>
		</LinearLayout>
	</ScrollView>
	<ScrollView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/screenTest">
		<LinearLayout android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_width="fill_parent">
			<TextView android:layout_height="wrap_content" style="@style/TextHeader"
				android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
				android:text="@string/calibrate_title_force_screen_on"></TextView>
			<TextView android:layout_height="wrap_content" style="@style/TextBody"
				android:layout_width="fill_parent" android:text="@string/calibrate_description_force_screen_on"></TextView>
			<TextView style="@style/TextBody" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:paddingTop="12dip"
				android:text="@string/calibrate_directions_force_screen_on"></TextView>
		</LinearLayout>
	</ScrollView>
	<ScrollView android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_width="fill_parent">
			<TextView android:layout_height="wrap_content" style="@style/TextHeader"
				android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
				android:text="@string/calibrate_title_results"></TextView>
			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" style="@style/TextHeaderTwo"
				android:text="@string/calibrate_title_alarm"></TextView>
			<TextView style="@style/TextBody" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:paddingTop="12dip"
				android:id="@+id/alarmResult"></TextView>
			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" style="@style/TextHeaderTwo"
				android:text="@string/calibrate_title_force_screen_on"></TextView>
			<TextView style="@style/TextBody" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:paddingTop="12dip"
				android:id="@+id/screenResult"></TextView>
		</LinearLayout>
	</ScrollView>
</com.androsz.electricsleep.widget.ViewFlipperBugfix>
