<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dip" >

        <TextView
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_your_screen_settings" />

        <TextView
            style="@style/TextBulleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some_android_devices_will_prevent_this_app_from_working_while_the_screen_is_off_" />

        <TextView
            style="@style/TextBulleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_detect_if_this_occurs_on_your_device_put_your_device_in_standby_mode_usually_by_quickly_pressing_the_power_button_" />

        <TextView
            style="@style/TextBulleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_up_to_10_seconds_for_your_screen_to_automatically_turn_back_on_then_you_may_need_to_unlock_your_device_to_continue_" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:text="@string/notification_screenbug_ticker" >
        </TextView>
    </LinearLayout>

</ScrollView>