<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/how_it_works"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep101_about" />

        <TextView
            android:id="@+id/textSleep"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dip"
            android:drawableLeft="@drawable/home_btn_sleep"
            android:drawablePadding="15dip"
            android:text="@string/welcome_how_track" >
        </TextView>

        <TextView
            android:id="@+id/textAlarm"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dip"
            android:drawableLeft="@drawable/home_btn_alarms"
            android:drawablePadding="15dip"
            android:text="@string/welcome_how_alarm" >
        </TextView>

        <TextView
            android:id="@+id/textHistory"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dip"
            android:drawableLeft="@drawable/home_btn_history"
            android:drawablePadding="15dip"
            android:text="@string/welcome_how_history" >
        </TextView>

        <TextView
            android:id="@+id/textConfigure"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_how_settings" >
        </TextView>
    </LinearLayout>

</ScrollView>